fix for button spacing and padding

--- a/themes/tom/static/assets/css/main.css
+++ b/themes/tom/static/assets/css/main.css
@@ -1358,12 +1358,12 @@ input, select, textarea {
 
 				#header nav ul li a {
 					display: block;
-					min-width: 7.5rem;
+					text-align: center;
+					width: 8.0rem;
 					height: 2.75rem;
 					line-height: 2.75rem;
-					padding: 0 1.25rem 0 1.45rem;
 					text-transform: uppercase;
-					letter-spacing: 0.2rem;
+					letter-spacing: 0.1rem;
 					font-size: 0.8rem;
 					border-bottom: 0;
 				}
